z-index fix

--- a/resources/scss/_player.scss
+++ b/resources/scss/_player.scss
@@ -1,6 +1,6 @@
 .player {
     position: fixed;
-    z-index: 1001;
+    z-index: 500;
     bottom: 0;
     left: 0;
     width: 100%;
